--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <title>Menu Cripto</title>
 </head>
 <body>
-    
+    <input class="menu-icon" type="chekbox" id="menu-icon" name="menu-icon">
+    <label for="menu-icon"></label>
+    <nav class="nav">
+        <ul class="pt-5">
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Studio</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <div class="section-center">
+        <h1 class="mb-0">Pure CSS menu</h1>
+    </div>
 </body>
 <footer><script src="Js/script.js"></script></footer>
 </html>
