--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Menu Cripto</title>
 </head>
 <body>
-    <input class="menu-icon" type="chekbox" id="menu-icon" name="menu-icon">
+    <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon">
     <label for="menu-icon"></label>
     <nav class="nav">
         <ul class="pt-5">
